# librcc

./: .bzrignore  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  NEWS  README  ToDo  VERSION  autogen.sh  config.h.cmake  configure.ac  configure.in  librcc.pc.in  librcc.spec.in  libtool  release
debian/: changelog  control  copyright  librcc-dev.dirs  librcc-dev.doc-base  librcc-dev.install  librcc.dirs  librcc.install  rules  substvars  watch
docs/: LibRCC.sxd  encodings.txt
docs/api/: Doxyfile  rcc-recode.c
engines/: Makefile.am  libguess.c  librcd.c  russian.c  western.c
example/: Makefile  Makefile.am  example.c
examples/: CMakeLists.txt  Makefile.am  example.c  example1.c  example2.c  input-russian.txt  input.txt  mpg123-rcc.patch  rcc-example.xml  rcc-gtk-config.c  rcc.xml  rcc.xml.chinese  rcc.xml.eastern  rcc.xml.western  rusxmms_cache.pl
m4/: aspell.m4  ax_compare_version.m4  ax_path_bdb.m4  xc-am-iface.m4
src/: CMakeLists.txt  Makefile.am  config.c  curconfig.c  curconfig.h  db4.h  enca.c  enca.h  engine.c  engine.h  fake_enca.h  fake_rcd.h  fs.c  fs.h  internal.h  librcc.c  librcc.h  lng.c  lng.h  lngconfig.c  lngconfig.h  lngrecode.c  lngrecode.h  opt.c  opt.h  plugin.c  plugin.h  rccconfig.c  rccconfig.h  rccdb4.c  rccdb4.h  rccenca.c  rccenca.h  rccexternal.c  rccexternal.h  rcchome.c  rcchome.h  rcciconv.c  rcciconv.h  rcclist.c  (+20 more)
ui/: Makefile.am  gtk.c  internal.h  librccui.c  librccui.h  null.c  rccmenu.c  rccmenu.h  rccnames.c  rccnames.h
